turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:29: error: type mismatch;
 found   : Char
 required: String
    com(rule(i))
            ^